# Data-_Mining_Project-

./: customer-segmentation-clustering.ipynb  main.py  pyproject.toml
